--- a/portfolio-project-matching-app/package.json
+++ b/portfolio-project-matching-app/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "tailwindcss": "^2.2.16"
   },
   "devDependencies": {
