installed Jest, created directories per Next.js/Jest docs

--- a/portfolio-project-matching-app/package.json
+++ b/portfolio-project-matching-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "firebase": "^9.1.0",
@@ -17,10 +18,16 @@
     "react-select": "^5.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
     "autoprefixer": "^10.3.6",
+    "babel-jest": "^27.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.3.1",
     "postcss": "^8.3.8",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^2.2.16"
   }
 }
