--- a/portfolio-project-matching-app/package.json
+++ b/portfolio-project-matching-app/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.2.2",
     "firebase": "^9.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
