--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
+      working-directory: ./portfolio-project-matching-app
     - run: npm test
+      working-directory: ./portfolio-project-matching-app
     - run: npm run build --if-present
+      working-directory: ./portfolio-project-matching-app
