--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: ./portfolio-project-matching-app/package-lock.json
     - run: npm install
       working-directory: ./portfolio-project-matching-app
     - run: npm test
