--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,5 @@ jobs:
         cache-dependency-path: ./portfolio-project-matching-app/package-lock.json
     - run: npm install
       working-directory: ./portfolio-project-matching-app
-    - run: npm test
+    - run: npm gh-test
       working-directory: ./portfolio-project-matching-app
