--- a/portfolio-project-matching-app/package.json
+++ b/portfolio-project-matching-app/package.json
@@ -7,8 +7,7 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
-    "gh-test": "jest"
+    "test": "jest"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.2.2",
